--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,9 @@
 [project]
 name = "lab-agent"
 version = "0.1.0"
-description = "Add your description here"
+description = "LLM agent that completes CS3220 Lab #2 (Branch Prediction)"
 readme = "README.md"
-requires-python = ">=3.14"
-dependencies = []
+requires-python = ">=3.12"
+dependencies = [
+    "openai>=1.0.0",
+]
