--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ assignment/
 # Secrets
 .env
 
-# Agent logs
-logs/
+# logs/ is intentionally tracked – individual run logs are committed
 
 cs3220-labs-sp2026/
 
